# backcast_evs

./: .gitignore  .pre-commit-config.yaml  Dockerfile.alembic  GEMINI.md  README.md  docker-compose.yml  docker-entrypoint-alembic.sh  new_versioning.md  pyproject.toml  revise_docs.md
backend/: .coverage  README.md  alembic.ini  coverage.xml  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1cd31119301f_add_projects_table.py  2ebc6a370a30_add_projects_table_retry.py  2ef9f6949b8e_refactor_userversion_to_use_.py  3c4d5e6f7a8b_add_password_changed_at_to_users.py  4be88f7b8fbd_add_department_versioned.py  5b79d8c44bed_user_entity_timezone_fix.py  7172847aa226_add_userpreference.py  8b73c9d2e3f4_migrate_preferences_to_json.py  94ccc0cb6464_initial_schema.py  9f027887a725_add_user_and_userversion_models.py  a00fdd40ae55_add_department_models.py  de146576a3d2_create_bitemporal_tables.py  f159e127bad9_restructure_to_bitemporal_single_table.py  fa9b552e6156_create_new_bitemporal_tables.py
backend/app/: main.py
backend/app/api/dependencies/: auth.py
backend/app/commands/: department.py  user.py  user_preference.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: seeder.py  session.py
backend/app/models/: mixins.py  protocols.py
backend/app/repositories/: base.py  department.py  user.py  user_preference.py
backend/app/services/: __init__.py  auth.py  department.py  user.py  user_preference.py
backend/scripts/: create_test_db.py  generate_openapi.py  run-dev.sh
backend/seed/: departments.json  users.json
backend/tests/: conftest.py  test_crud_lifecycle.py
backend/tests/api/: test_auth.py  test_departments.py  test_health.py  test_users.py
backend/tests/commands/: test_user.py
backend/tests/core/: test_config.py  test_security.py
backend/tests/db/: test_database.py
backend/tests/integration/: test_auth_service.py  test_branch_service.py  test_integration_branch_service.py  test_user_history_api.py
backend/tests/repositories/: test_user.py
backend/tests/services/: test_user.py
backend/tests/unit/: test_commands.py  test_security.py  test_user_repository.py
(+212 files in other folders)
